@@ -58,7 +58,7 @@ final class TypeConverter {
 
     private static final long DAY_IN_MILLIS = 60 * 60 * 24;
     private static final Map<Class<?>, JDBCType> javaToJDBC;
-    
+
     static {
         Map<Class<?>, JDBCType> aMap = Arrays.stream(DataType.values())
                 .filter(dataType -> dataType.javaClass() != null
@@ -119,7 +119,7 @@ final class TypeConverter {
             c.setTimeInMillis(initial);
         }
     }
-    
+
     static long convertFromCalendarToUTC(long value, Calendar cal) {
         if (cal == null) {
             return value;
@@ -142,7 +142,7 @@ final class TypeConverter {
         if (type == null) {
             return (T) convert(val, columnType);
         }
-        
+
         if (type.isInstance(val)) {
             try {
                 return type.cast(val);
@@ -150,7 +150,7 @@ final class TypeConverter {
                 throw new SQLDataException("Unable to convert " + val.getClass().getName() + " to " + columnType, cce);
             }
         }
-        
+
         if (type == String.class) {
             return (T) asString(convert(val, columnType));
         }
@@ -276,8 +276,8 @@ final class TypeConverter {
         }
         return dataType.isSigned();
     }
-    
-    
+
+
     static JDBCType fromJavaToJDBC(Class<?> clazz) throws SQLException {
         for (Entry<Class<?>, JDBCType> e : javaToJDBC.entrySet()) {
             // java.util.Calendar from {@code javaToJDBC} is an abstract class and this method can be used with concrete classes as well
@@ -285,7 +285,7 @@ final class TypeConverter {
                 return e.getValue();
             }
         }
-        
+
         throw new SQLFeatureNotSupportedException("Objects of type " + clazz.getName() + " are not supported");
     }
 
@@ -432,7 +432,7 @@ final class TypeConverter {
             case REAL:
             case FLOAT:
             case DOUBLE:
-                return new Float(((Number) val).doubleValue());
+                return Float.valueOf((((float) ((Number) val).doubleValue())));
             default:
         }
 
@@ -451,7 +451,7 @@ final class TypeConverter {
             case REAL:
             case FLOAT:
             case DOUBLE:
-                return new Double(((Number) val).doubleValue());
+                return Double.valueOf(((Number) val).doubleValue());
             default:
         }
 
